--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -1,54 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
     android:padding="20dp"
     tools:context=".MainActivity">
 
+    <!-- Toolbar arriba -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:title="TOOLBAR"
-        android:layout_gravity="center"
-        android:titleTextColor="@android:color/white"/>
+        android:titleTextColor="@android:color/white"
+        android:layout_alignParentTop="true" />
 
-
+    <!-- Primer botón arriba a la izquierda -->
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="105dp"
-        android:background="@drawable/imagen8"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
         android:text="TOAST"
-        android:textSize="30sp"
+        android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_marginBottom="30dp"/>
+        android:background="@drawable/imagen8"
+        android:layout_below="@id/toolbar"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp"/>
 
+    <!-- Segundo botón debajo del primero -->
+    <Button
+        android:id="@+id/button"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
+        android:text="COUNT"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_below="@id/button2"
+        android:layout_alignStart="@id/button2"
+        android:layout_marginTop="10dp"/>
+
+    <!-- TextView grande a la derecha de los botones -->
     <TextView
         android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="352dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="50dp"
+        android:layout_width="209dp"
+        android:layout_height="284dp"
+        android:layout_alignTop="@id/button2"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="-1dp"
+        android:layout_marginEnd="42dp"
+        android:layout_toEndOf="@id/button2"
+        android:background="@drawable/gradient"
         android:gravity="center"
         android:text="0"
         android:textSize="120sp"
-        android:textStyle="bold"
-        android:background="@drawable/gradient"/>
-
-
-    <Button
-        android:id="@+id/button"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="match_parent"
-        android:layout_height="105dp"
-        android:text="COUNT"
-        android:textSize="30sp"
         android:textStyle="bold" />
 
-</LinearLayout>
+</RelativeLayout>
